// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceConnectBodyTest renders, with device connect state = Connected 1`] = `
<div
  className="deviceConnectBody"
>
  <DeviceConnectHeader
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
  <DeviceConnectPortEntry
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
    viewState={
      Object {
        "deviceConnectState": 2,
      }
    }
  />
  <DeviceConnectConnectedDevice
    connectedDevice="Test Device"
    deviceConnectState={2}
  />
  <DeviceConnectFooter
    canStartTesting={true}
    cancelClick={[Function]}
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
</div>
`;

exports[`DeviceConnectBodyTest renders, with device connect state = Connecting 1`] = `
<div
  className="deviceConnectBody"
>
  <DeviceConnectHeader
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
  <DeviceConnectPortEntry
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
    viewState={
      Object {
        "deviceConnectState": 1,
      }
    }
  />
  <DeviceConnectConnectedDevice
    connectedDevice="Test Device"
    deviceConnectState={1}
  />
  <DeviceConnectFooter
    canStartTesting={false}
    cancelClick={[Function]}
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
</div>
`;

exports[`DeviceConnectBodyTest renders, with device connect state = Default 1`] = `
<div
  className="deviceConnectBody"
>
  <DeviceConnectHeader
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
  <DeviceConnectPortEntry
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
    viewState={
      Object {
        "deviceConnectState": 0,
      }
    }
  />
  <DeviceConnectConnectedDevice
    connectedDevice="Test Device"
    deviceConnectState={0}
  />
  <DeviceConnectFooter
    canStartTesting={false}
    cancelClick={[Function]}
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
</div>
`;

exports[`DeviceConnectBodyTest renders, with device connect state = Error 1`] = `
<div
  className="deviceConnectBody"
>
  <DeviceConnectHeader
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
  <DeviceConnectPortEntry
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
    viewState={
      Object {
        "deviceConnectState": 3,
      }
    }
  />
  <DeviceConnectConnectedDevice
    connectedDevice="Test Device"
    deviceConnectState={3}
  />
  <DeviceConnectFooter
    canStartTesting={false}
    cancelClick={[Function]}
    deps={
      Object {
        "ipcRendererShim": Object {
          "closeWindow": [Function],
        },
      }
    }
  />
</div>
`;
